# bq24292i

./: .clang-format  CMakeLists.txt  README.md  bq24292i.c  bq24292i.h
include/: bq24292i.h
include/bq24292i/: bq24292i_defs.h  bq24292i_regs.h
src/: bq24292i.c
